# ps-uuid

./: Cargo.toml
src/: constants.rs  error.rs  lib.rs  macros.rs
src/features/: mod.rs  rkyv.rs  serde.rs
src/features/num_traits/: bounds.rs  bytes.rs  cast.rs  checked.rs  euclid.rs  identity.rs  inv.rs  mod.rs  mul_add.rs  num.rs  overflowing.rs  pow.rs  prim_int.rs  saturating.rs  tests.rs  wrapping.rs
src/features/uuid_crate_compat/: compat.rs  mod.rs
src/gregorian/: mod.rs
src/gregorian/methods/: elapsed.rs  epoch.rs  mod.rs
src/helpers/: md5.rs  mod.rs  sha1.rs  to_hex.rs
src/implementations/: as_mut.rs  as_ref.rs  borrow.rs  borrow_mut.rs  debug.rs  display.rs  from_bytes.rs  from_int.rs  from_str.rs  mod.rs  try_from.rs
src/implementations/ops/: arithmetic.rs  bitwise.rs  comprehensive_tests.rs  index.rs  int_operand.rs  mod.rs  neg.rs  shift.rs  shift_amount.rs
src/methods/: as_bytes.rs  as_mut_bytes.rs  clock_seq.rs  duration_to_ticks.rs  fmt_braced.rs  fmt_hyphenated.rs  fmt_simple.rs  fmt_urn.rs  from_bytes.rs  from_parts_dcom.rs  from_parts_ncs.rs  from_parts_v1.rs  from_parts_v2.rs  from_parts_v3.rs  from_parts_v4.rs  from_parts_v5.rs  from_parts_v6.rs  from_parts_v7.rs  from_parts_v8.rs  from_u128.rs  gen_dcom.rs  gen_ncs.rs  gen_v1.rs  gen_v2.rs  gen_v4.rs  gen_v6.rs  gen_v7.rs  get_clock_seq.rs  get_node_id.rs  get_timestamp.rs  get_variant.rs  get_version.rs  max.rs  mod.rs  new_dcom.rs  new_dcom_from_parts.rs  new_ncs.rs  new_v1.rs  new_v2.rs  new_v3.rs  (+17 more)
src/node_id/: mod.rs
src/node_id/implementations/: deref.rs  deref_mut.rs  mod.rs
src/node_id/implementations/as_mut/: array.rs
src/node_id/implementations/as_ref/: array.rs  mod.rs  slice.rs
src/node_id/implementations/from/: array.rs  array_ref.rs  mod.rs
src/node_id/methods/: as_bytes.rs  as_bytes_mut.rs  from_bytes.rs  into_bytes.rs  mod.rs  random.rs  to_bytes.rs
src/state/: mod.rs
src/state/implementations/: default.rs
src/state/methods/: is_adoptable.rs  mod.rs  next.rs  next_v2.rs  next_v7.rs  node_id.rs  set_node_id.rs
src/variant/: mod.rs
src/variant/methods/: bitmask.rs  mod.rs  prefix.rs
