[package]
name = "ps-uuid"
version = "0.1.0-0"
edition = "2021"
description = "An opinionated UUID implementation."
license = "GPL-3.0-or-later"

[dependencies]
once_cell = "1.21.3"
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.16"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
serde = ["dep:serde"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
