[package]
name = "ps-uuid"
version = "0.1.0-3"
edition = "2021"
description = "An opinionated UUID implementation."
documentation = "https://docs.rs/ps-uuid"
repository = "https://github.com/prokopschield/ps-uuid"
license = "GPL-3.0-or-later"

[dependencies]
once_cell = "1.21.3"
parking_lot = { version = "0.12.4", features = ["arc_lock"] }
rand = "0.9.2"
rkyv = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.16"

[dev-dependencies]
serde_json = "1.0"

[features]
default = []
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
