[package]
name = "ps-uuid"
version = "0.1.0-4"
edition = "2021"
rust-version = "1.87"
description = "An opinionated UUID implementation."
documentation = "https://docs.rs/ps-uuid"
repository = "https://github.com/prokopschield/ps-uuid"
license = "GPL-3.0-or-later"
keywords = ["guid", "rfc9562", "uuid", "uuidv4", "uuidv7"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
num-traits = { version = "0.2.19", optional = true }
parking_lot = { version = "0.12.5", features = ["arc_lock"] }
rand = "0.9.2"
rkyv = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
thiserror = "2.0.18"
uuid = { version = "1", optional = true }

[dev-dependencies]
bincode = "1.3"
postcard = { version = "1.1", features = ["alloc"] }
serde_json = "1.0"
toml = "0.9"

[features]
default = []
num_traits = ["dep:num-traits"]
rkyv = ["dep:rkyv"]
serde = ["dep:serde"]
uuid-crate-compat = ["dep:uuid"]

[lints]
clippy.nursery.level = "warn"
clippy.nursery.priority = -1
clippy.pedantic.level = "deny"
clippy.pedantic.priority = -1
clippy.redundant_pub_crate = "allow"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
